# AutoChart

./: .gitignore  README.md  examples.xlsx  pyproject.toml
src/autochart/: __init__.py  cli.py  config.py  extractor.py  templates.py
src/autochart/builder/: combiner.py  injector.py  postprocess.py  pptx_exporter.py  template_builder.py  textbox_updater.py  workbook.py
src/autochart/charts/: chart_set_a.py  chart_set_b.py  chart_set_c.py  ooxml.py  part_3.py
src/autochart/parser/: __init__.py  base.py  pivoted.py  sas_output.py
src/autochart/template_packages/: __init__.py  bphc_template.pptx  loader.py
src/autochart/template_packages/combined_comparison/: manifest.json  template.xlsx
src/autochart/template_packages/gender_race_stratified/: manifest.json  template.xlsx
src/autochart/template_packages/race_vs_reference/: manifest.json  template.xlsx
src/autochart/template_packages/race_vs_rest/: manifest.json  template.xlsx
src/autochart/templates/: template.xlsx
src/autochart/text/: generator.py
tests/: test_builder.py  test_chart_set_a.py  test_chart_set_b.py  test_chart_set_c.py  test_cli.py  test_config.py  test_extractor.py  test_ooxml.py  test_parser.py  test_part_3.py  test_postprocess.py  test_templates.py  test_text.py
webapp/: app.py
