[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autochart"
version = "0.1.0"
description = "Automated public health chart generation for Excel"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "streamlit>=1.30.0",
    "python-pptx>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
autochart = "autochart.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autochart = [
    "templates/*.xlsx",
    "template_packages/**/template.xlsx",
    "template_packages/**/manifest.json",
    "template_packages/**/preview.svg",
    "template_packages/bphc_template.pptx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
